# gofigure

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json  test.db
src-tauri/.sqlx/: query-115cf5324e1b97cd66bee7ad51882a9afc088cb9766b543b7aec71eaa4071d9a.json  query-18ef3048a66f7862b307c0c7f55394ffc7b3ed2fe306f963980460ceae88f578.json  query-1977d683b6e3d3b552bfb21089635b882760b58a803bb1440adde93206b4908e.json  query-2c38c7ae7ac79ae3b375d304de3b46eaa8001859b199e55a9d8295c1da990753.json  query-37fd9473005e5622279681f9e190f8277bdf5c5a00a003d962373f89973d967a.json  query-516bce4aa24f98007719fd56be4a2cc3397ab8748b63084b2c8403196a2d5b5f.json  query-5211e090427bd88575a50e31d23c22323746369dd7fef37ddb1a3cfb845e8635.json  query-6382e0d10f01cfddecd0412df31d83d9fa5ac19a1c6c0e317d9341e939ec7573.json  query-6ca8e938e8b9ff661000ab3b3afd79fee6ce97a21556856e29b446ef6f8405bf.json  query-7a4f5ae5f613038060a57c4b2e8828afb176e3120d7060b6062e631b0486dddf.json  query-7eac1669e8d25f2d658b5409a24a0b95dfb0f757164e8e660e5a96f30513c32d.json  query-d1f941aa02aa172dd05bdb803d922edda381188310d67326fbec209411e8ff85.json  query-ea7d9a31a9f3642d8942de59a38057835cb43f2e55765a153a7163ddddcabce7.json  query-f1a993e1fb5470a7ba38f0ed1ebaf24708245581cd0b9172e4fa41c16caa7627.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260620004640_image_sources.sql  20260620202243_session_history.sql  20260620205618_repeat_cache.sql  20260622004703_settings.sql  20260628002842_saved_configs.sql  20260702010746_settings_theme.sql
src-tauri/src/: lib.rs  main.rs  (+2 more)
(+33 files in other folders)
