[package]
name = "gofigure"
version = "1.0.2"
description = "An app for timed figure drawing practice"
authors = ["heffree"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gofigure_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rand = "0.10.1"
walkdir = "2.5.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0.102"
thiserror = "2.0.18"

